Fixup navbar spacing issue

--- a/src/assets/css/alexandria.css
+++ b/src/assets/css/alexandria.css
@@ -27,7 +27,6 @@
 	background-color: #000; 
 	width: 100%; 
 	height: 720px; 
-	margin-top: 54px;
 }
 
 .content-container .content {
